refactor: discarded List.of() for Java 8 compatibility